--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/4a7c6e8b5b.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body style="background-color: #ddceb3;">
     <section id="about-me">
 <nav>
     <div class="personal__logo">Logan Patterson</div>
@@ -28,7 +29,7 @@ link__hover-effect--black
         <li>
 <a href="" class="
 nav__link--anchor
-nav__link--anchor-primarygit 
+nav__link--anchor-primary 
 ">Contact</a>
 </li>
 </nav>
@@ -43,7 +44,24 @@ nav__link--anchor-primarygit
     </h1>
     <p class="about-me__info--para">I'm a <strong class="text--purple"> Frontend software engineer.</strong> Looking forward to building websites as well as help improve advanced AI's. Coding has been a very challenging and fun experience for me. But the more I fail. The more I desire to resolve the issue and learn from my mistakes.
     </p>
+    <div class="about-me__links">
+        <a href="" class="about-me__link">
+<i class="fab fa-discord"></i>
+        </a>
+        <a href="" class="about-me__link">
+<i class="fa-solid fa-inbox"></i>
+        </a>
+        <a href="" class="about-me__link">
+<i class="fab fa-github"></i>
+        </a>
+        <a href="" class="about-me__link">
+<i class="fa-solid fa-file"></i>
+        </a>
 </div>
+</div>
+<figure class="about-me__img--container">
+    <img src="assets/ChatGPT Image Oct 21, 2025, 10_08_16 PM.png" class="about-me__img" alt="">
+    </figure>
  </div>      
 </div>
 </section>
