--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@ nav__link--anchor-primary
                 <figure class="language__img-wrapper">
                 <figure class="language__img-wrapper">
                 <figure class="language__img-wrapper">
+                <figure class="language__img-wrapper">
+                <figure class="language__img-wrapper">
+                <figure class="language__img-wrapper">
             <div class="language__list">
 
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="HTML5 Logo" class="language__img">
@@ -85,6 +88,12 @@ nav__link--anchor-primary
             <div class="language__list">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="HTML5 Logo" class="language__img">
 
+            </div>
+            <div class="language__list">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="HTML5 Logo" class="language__img">
+            </div>
+            <div class="language__list">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="HTML5 Logo" class="language__img">
             </div>
             <div class="language__list">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="HTML5 Logo" class="language__img">
