--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/4a7c6e8b5b.js" crossorigin="anonymous"></script>
 </head>
 <body style="background-color: #ddceb3;">
@@ -215,4 +215,40 @@ nav__link--anchor-primary
     </div>
 </div>
 </section>
+<footer>
+    <div class="row footer__row">
+        <a href="#" class="footer__anchor">
+            <figure class="footer__logo">
+                <img src="./assets/logo.png" class="footer__logo--img" alt="">
+            </figure>
+            <span class="footer__logo--popper">
+                Top
+                <i class="fas fa-arrow-up"></i>
+            </span>
+        </a>
+        <div class="footer__social--list">
+            <a href="https://github.com/Ljp-5280/E.PortfolioHTML.git" class="
+            footer__social--link
+            link__hover-effect
+            link__hover-effect--white
+            " target="_blank">GitHub</a>
+            <a href="https://www.youtube.com/results?search_query=kublai+khan+tx" class="
+            footer__social--link
+            link__hover-effect
+            link__hover-effect--white
+            " target="_blank">YouTube</a>
+            <a href="mailto:coddedpatt@outlook.com" class="
+            footer__social--link
+            link__hover-effect
+            link__hover-effect--white
+            " target="_blank">Email</a>
+            <a href="./assets/Example Resume.pdf" class="
+            footer__social--link
+            link__hover-effect
+            link__hover-effect--white
+            " target="_blank">Resume</a>
+        </div>
+        <div class="footer__copyright">Copyright © 2025 Logan Patterson</div>
+    </div>
+</footer>
 </body>
