--- a/index.html
+++ b/index.html
@@ -12,22 +12,23 @@
 <nav>
     <div class="personal__logo">Logan Patterson</div>
     <ul class="nav__link--list">
-        <li>
-<a href="" class="
+        <li class=" nav__link">
+            <a href="" class="section__title"></a>
+<a href="#languages" class="
 nav__link--anchor
 link__hover-effect
 link__hover-effect--black
 ">Languages</a>
 </li>
-        <li>
-<a href="" class="
+        <li class=" nav__link">
+<a href="#projects" class="
 nav__link--anchor
 link__hover-effect
 link__hover-effect--black
-">Project</a>
+">Projects</a>
 </li>
-        <li>
-<a href="" class="
+        <li class=" nav__link">
+<a href="mailto:codedpatt@outlook.com" class="
 nav__link--anchor
 nav__link--anchor-primary 
 ">Contact</a>
@@ -40,21 +41,21 @@ nav__link--anchor-primary
         <img src="assets/IMG_5307.jpg" class="about-me__picture" alt="Picture of Me!">
     </figure>
     <h1 class="about-me__info--title">
-        Hey! I'm <span class="text--purple">Logan Patterson</span> 🤘🏼
+        Hey! I'm <span class="text--purple">Logan Patterson</span>&nbsp;<span class="wave">🤘🏼</span>
     </h1>
     <p class="about-me__info--para">I'm a <strong class="text--purple"> Frontend software engineer.</strong> Looking forward to building websites as well as help improve advanced AI's. Coding has been a very challenging and fun experience for me. But the more I fail. The more I desire to resolve the issue and learn from my mistakes.
     </p>
     <div class="about-me__links">
-        <a href="" class="about-me__link">
+        <a href="https://discord.com/" class="about-me__link">
 <i class="fab fa-discord"></i>
         </a>
-        <a href="" class="about-me__link">
+        <a href="https://www.microsoft.com/en-us/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook?deeplink=%2fmail%2f0%2f%3fnlp%3d0&sdf=0" target="_blank" class="about-me__link">
 <i class="fa-solid fa-inbox"></i>
         </a>
-        <a href="" class="about-me__link">
+        <a href="https://github.com/Ljp-5280/E.PortfolioHTML.git" target="_blank" class="about-me__link">
 <i class="fab fa-github"></i>
         </a>
-        <a href="" class="about-me__link">
+        <a href="assets/Example Resume.pdf" target="_blank" class="about-me__link">
 <i class="fa-solid fa-file"></i>
         </a>
 </div>
@@ -219,7 +220,7 @@ nav__link--anchor-primary
     <div class="row footer__row">
         <a href="#" class="footer__anchor">
             <figure class="footer__logo">
-                <img src="./assets/logo.png" class="footer__logo--img" alt="">
+                <img src="./assets/chatlogo.png" class="footer__logo--img" alt="">
             </figure>
             <span class="footer__logo--popper">
                 Top
